# ellmo

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
ellmo/internal/: models.py
ellmo/routes/chat/: content_generator.py  core.py
